--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!--end header-->
 
     <!-- start landing -->
-    <div class="landing" id="home">
+    <div class="landing" id="home" style="background-image: url(images/background.jpg);">
         <div class="overlay">
             <div class="text">
                 <div class="content">
@@ -133,7 +133,7 @@
     <!--end services-->
 
     <!--start design-->
-    <div class="design">
+    <div class="design" style="background-image: url(/images/blue-background-4863452_1280.jpg);">
         <div class="image">
             <img src="images/iphone-black.png" alt="mobile">
         </div>
@@ -269,7 +269,8 @@
 
 
     <!--start statistics-->
-    <div class="stats">
+
+    <div class="stats" style="background-image: url(/images/6.jpg) ;">
         <div class="container">
             <div class="box">
                 <i class="fas fa-mug-hot"></i>
@@ -362,7 +363,7 @@
     <!--end skills-->
 
     <!--start quote-->
-    <div class="quote">
+    <div class="quote" style="background-image: url(/images/4.jpg);">
         <div class="container">
             <q>Lorem, ipsum delit. Veritatis sapie quaeligendi esse deleniti sit qui vero </q>
             <span>yasser salem</span>
@@ -453,7 +454,7 @@
     <!--end pricing -->
 
     <!--start subscrib-->
-    <div class="subscribe">
+    <div class="subscribe" style="background-image: url(/images/5.jpg);">
         <div class="container">
             <form action="">
                 <i class="far fa-envelope fa-lg"></i>
@@ -500,7 +501,7 @@
     <!--end contact us-->
 
     <!--start  footer-->
-    <div class="footer">
+    <div class="footer" style="background-image: url(/images/3.jpg);">
         <div class="container">
             <img src="images/logo11.png" alt="">
             <p>We Are Social</p>
