--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!--end header-->
 
     <!-- start landing -->
-    <div class="landing" id="home" style="background-image: url(images/background.jpg);">
+    <div class="landing" id="home" style="background-image: url(/images/background.jpg);">
         <div class="overlay">
             <div class="text">
                 <div class="content">
